# innovation_hub

./: .env.example  .gitignore  AGENTS.md  API_CONTRACT.md  APPLICATION_OVERVIEW.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: add_summary_column.py  container.py  main.py
backend/app/application/dto/: __init__.py  chat_dto.py  comment_dto.py  common.py  event_award_dto.py  event_dashboard_dto.py  event_dto.py  event_faq_dto.py  event_idea_dto.py  event_scoring_dto.py  event_team_dto.py  idea_dto.py  notification_dto.py  problem_dto.py  reaction_dto.py  room_dto.py  user_dto.py  vote_dto.py
backend/app/application/services/: __init__.py  agent_proxy_service.py  chat_session_service.py  jwt_service.py  notification_service.py  response_enrichment.py
backend/app/application/use_cases/: __init__.py
backend/app/core/: config.py  exceptions.py
backend/app/domain/entities/: __init__.py  chat_message.py  chat_session.py  comment.py  event.py  event_award.py  event_faq.py  event_idea.py  event_score.py  event_scoring_criteria.py  event_team.py  idea.py  notification.py  problem.py  reaction.py  room.py  user.py  vote.py
backend/app/domain/repositories/: __init__.py  chat_message_repository.py  chat_session_repository.py  comment_repository.py  event_award_repository.py  event_faq_repository.py  (+12 more)
backend/scripts/: add_summary_column.py  create_admin.py  debug_login.py  reset_admin_password.py  seed_demo_continue.py  seed_demo_data.py
backend/tests/: conftest.py
(+278 files in other folders)
